--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mueossa</title>
+    <script src="/js/jquery-3.7.1.min.js"></script>
     <script th:src="@{/js/main_script.js}"></script>
     <script th:src="@{/js/wish_script.js}"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/main_style.css}" />
 
     <th:block layout:fragment="script"></th:block>
