--- a/src/main/resources/templates/fragments/productList.html
+++ b/src/main/resources/templates/fragments/productList.html
@@ -26,7 +26,7 @@
               <div
                 class="product-sentiment"
                 name="sentiment"
-                th:text="${product.sentiment}"
+                th:text="|💖${product.sentiment}|"  
               ></div>
               <div class="keywords">
                 <p th:if="${product.ctComf} == 'Y' ">편한</p>
