--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,14 +16,14 @@
 
 
 
-<!-- 여기 로그인이에요! -->
-<div id="login" class="page">
-  <div class="section-title">LOGIN</div>
-  
-  <!-- 에러 메시지 -->
-  <div th:if="${error}" class="error-message">
-    <p th:text="${error}"></p>
-  </div>
+  <!-- 여기 로그인이에요! -->
+  <div id="login" class="page">
+    <div class="section-title">LOGIN</div>
+
+    <!-- 에러 메시지 -->
+    <div th:if="${error}" class="error-message">
+      <p th:text="${error}"></p>
+    </div>
 
     <!-- 로그인 폼 -->
     <form method="post" th:action="@{/userLogin}" th:object="${user}">
@@ -42,12 +42,13 @@
       <!-- 하단 링크 -->
       <div class="login-links">
         <a href="goJoin">회원가입</a> |
+        <a href="goFindAccount">계정 찾기</a> |
         <a href="#">문의하기</a>
       </div>
 
       <!-- 로그인 버튼 -->
       <div class="login-buttons">
-        <button type="submit" >로그인</button>
+        <button type="submit">로그인</button>
       </div>
     </form>
   </div>
