--- a/src/main/resources/static/css/main_style.css
+++ b/src/main/resources/static/css/main_style.css
@@ -15,6 +15,8 @@
   --color-accent: #7C3AED;            /* 감성적 강조 컬러 (세일, 이벤트 배너 포인트 등) */
   --color-brown: #B17457;           /* 브라운 계열 (브라운 색상) */
   --color-green: #10B981;            /* 그린 계열 (그린 색상) */
+  --color-card-white: rgb(250, 250, 250);
+  --color-card-gray: rgb(240, 240, 240);
 }
 
 
@@ -274,7 +276,7 @@ p {
 
 .preference-button2 {
   width: 80px;
-  height: 25px;
+  height: 80px;
   border-radius: 10px;
   background-color: #ffffffb6;
   margin-top : 5px;
@@ -296,9 +298,9 @@ p {
 .preference-button2.selected {
   background-color: var(--color-secondary-dark);
   /* 선택된 버튼의 배경색 */
-  color: var(--color-background);
+  color: var(--color-secondary-dark);
   /* 선택된 버튼의 텍스트 색상 */
-  border: 1px solid #f0f0f0;
+  border: 1px solid var(--color-secondary-dark);
   /* 선택된 버튼의 테두리 색상 */
 }
 
@@ -306,7 +308,13 @@ p {
   display: none;
 }
 
+.preference-button2 img {
+  width: 70px;
+  height: 70px;
+  margin-top: 4px;
+  border-radius: 10px;
 
+}
 
 
 
@@ -728,11 +736,18 @@ span input {
 .product-card a {
   text-decoration: none;
   color: inherit;
+  background-color: var(--color-card-gray);
   display: block;
   height: 100%;
   padding: 5px;
   box-sizing: border-box;
   transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.product-card a:hover {
+  background-color: var(--color-card-white);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
+  transform: translateY(-1px); 
 }
 
 .product-image {
@@ -750,9 +765,13 @@ span input {
 .product-info {
   position: relative;
   padding: 10px;
-  background-color: #f3f3f3d5;
+  background-color: var(--color-card-white);
   white-space: normal;
   height: 140px;
+}
+
+.product-info:hover {
+  transform: translateY(-1px); 
 }
 
 .product-brand {
@@ -768,6 +787,7 @@ span input {
   font-size: 8px;
   font-weight: bold;
   color: #666;
+  display: inline-block;
   margin-bottom: 4px;
 }
 
@@ -776,6 +796,7 @@ span input {
   font-weight: bold;
   color: var(--color-text-main);
   margin-bottom: 4px;
+  display: inline-block
 }
 
 .keywords {
@@ -796,6 +817,14 @@ span input {
   word-wrap: break-word;
   word-break: break-word;
   white-space: normal;
+}
+
+.keywords p:hover {
+  background-color: var(--color-secondary-dark);
+  color: white;
+  cursor: pointer;
+  transform: translateY(-1px);
+  transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
 .product-title {
