--- a/src/main/resources/templates/filterCategory.html
+++ b/src/main/resources/templates/filterCategory.html
@@ -109,7 +109,7 @@
           <label for="standard" class="preference-button2"
             th:classappend="${session.filteredProducts?.ctStandard == 'Y'} ? 'selected' : ''">
             <img src="/images/category-icons/normal feet.jpg" alt=" ">
-          <span>발볼이 보통인</span>
+          <span>발볼이 보통</span>
           </label>
           <input type="checkbox" id="standard" name="ctStandard" value="Y"
             th:checked="${session.filteredProducts?.ctStandard == 'Y'}" />
@@ -147,22 +147,34 @@
           <input type="radio" id="shoesSneakers" name="pGroup" value="스니커즈"
             th:checked="${session.filteredProducts?.pGroup == '스니커즈'}" />
           <label for="shoesSneakers" class="preference-toggle"
-            th:classappend="${session.filteredProducts?.pGroup == '스니커즈'} ? 'selected' : ''">스니커즈</label>
+            th:classappend="${session.filteredProducts?.pGroup == '스니커즈'} ? 'selected' : ''">
+          <img src="/images/shoes/sneekers.png" alt=" ">
+          <span>스니커즈</span>
+          </label>
 
           <input type="radio" id="shoesHeels" name="pGroup" value="구두"
             th:checked="${session.filteredProducts?.pGroup == '구두'}" />
           <label for="shoesHeels" class="preference-toggle"
-            th:classappend="${session.filteredProducts?.pGroup == '구두'} ? 'selected' : ''">구두</label>
+            th:classappend="${session.filteredProducts?.pGroup == '구두'} ? 'selected' : ''">
+            <img src="/images/shoes/dress_shoes.png" alt=" ">
+            <span>구두</span>
+          </label>
 
           <input type="radio" id="shoesBoots" name="pGroup" value="부츠/워커"
             th:checked="${session.filteredProducts?.pGroup == '부츠/워커'}" />
           <label for="shoesBoots" class="preference-toggle"
-            th:classappend="${session.filteredProducts?.pGroup == '부츠/워커'} ? 'selected' : ''">부츠/워커</label>
+            th:classappend="${session.filteredProducts?.pGroup == '부츠/워커'} ? 'selected' : ''">
+            <img src="/images/shoes/boots.png" alt=" ">
+            <span>부츠/워커</span>
+          </label>
 
           <input type="radio" id="shoesSandals" name="pGroup" value="샌들/슬리퍼"
             th:checked="${session.filteredProducts?.pGroup == '샌들/슬리퍼'}" />
           <label for="shoesSandals" class="preference-toggle"
-            th:classappend="${session.filteredProducts?.pGroup == '샌들/슬리퍼'} ? 'selected' : ''">샌들/슬리퍼</label>
+            th:classappend="${session.filteredProducts?.pGroup == '샌들/슬리퍼'} ? 'selected' : ''">
+            <img src="/images/shoes/sandal.png" alt=" ">
+            <span>샌들/슬리퍼</span>
+          </label>
         </div>
 
 
