--- a/src/main/resources/templates/fragments/productList.html
+++ b/src/main/resources/templates/fragments/productList.html
@@ -22,7 +22,8 @@
                 data-ctstandard=${product.ctStandard},
                 data-ctcost=${product.ctCost},
                 data-ctstrong=${product.ctStrong},
-                data-pgroup=${product.pGroup}
+                data-pgroup=${product.pGroup},
+                data-ptype=${product.pType},
              "
         >
           <!-- 찜버튼용 data-pid추가 -->
